# swagger.json
@@ -1,27 +1,18 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Contacts API",
+    "title": "Habit Tracker API",
+    "description": "API for tracking daily habits with OAuth2 and JWT Authentication",
     "version": "1.0.0"
   },
   "host": "cse241-habit-tracker.onrender.com",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
     "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/users/": {
       "get": {
         "description": "",
         "produces": [
@@ -45,10 +36,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
+                "userId": {
                   "example": "any"
                 }
               }
@@ -68,7 +56,7 @@
         }
       }
     },
-    "/users/{id}": {
+    "/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -77,21 +65,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -134,16 +107,35 @@
           }
         }
       }
-    },
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT",
+        "description": "Enter your JWT token with Bearer prefix"
+      },
+      "OAuth2": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://accounts.google.com/o/oauth2/auth",
+            "tokenUrl": "https://oauth2.googleapis.com/token",
+            "scopes": {
+              "openid": "OpenID Connect",
+              "profile": "Access your profile info",
+              "email": "Access your email address"
+            }
           }
         }
       }
     }
-  }
+  },
+  "security": [
+    {
+      "BearerAuth": []
+    }
+  ]
 }
